--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,62 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css) layer(format);
-
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 :root {
-    --clr-blue : #1673FD;
+    --clr-retro-red : #FE2F01;
+    --clr-retro-brown: #A58B00;
 }
 
-button.btn {
-    color: var(--clr-blue);
-    border-color: var(--clr-blue);
+body {
+    font-family: 'Karla', sans-serif;
 }
 
-.person-icon {
+.page-wrapper {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+h1 {
+    font-size: 60px;
+}
+
+a.nav-link {
+    border: var(--clr-retro-red) solid;
+    border-radius: 60px;
+    background-color: var(--clr-retro-red);
+    font: #fff;
+}
+
+li.nav-item a.nav-link {
+    margin-left: 20px;
+}
+
+li form.d-flex {
+    margin-left: 20px;
+}
+
+a.navbar-brand {
+    transition: all ease 0.3s;
+}
+
+a.navbar-brand:hover {
+    color: var(--clr-retro-brown);
+}
+
+.slide-left {
+    animation: slide-in-left 1s;
+}
+
+@keyframes slide-in-left {
+    0% {
+        opacity: 0;
+        transform: translateX(-50%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0%);
+    }
+}
+
+.mushroom-icon {
     height: 25px;
 }
 
@@ -20,18 +67,55 @@ button.btn {
     padding-top: 40px;
 }
 
-.container.hero {
-    min-height: 220px;
-    background-image: url("../images/pizza.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.container.hero h1 {
-    background-color: rgba(255,255,255,0.5);
-}
-
 nav.navbar {
     padding: unset;
 }
+
+.hero-img {
+    max-height: 600px;
+    padding-top: 20px;
+}
+
+nav div.container-fluid {
+    padding: unset;
+}
+
+.menu-icon {
+    opacity: 0.85;
+    transition: all ease 0.3s;
+}
+.menu-icon:hover {
+    opacity: 1;
+    transform: scale(1.1);
+}
+
+@keyframes walk {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(100vw); /* Move the image across the entire screen */
+    }
+}
+
+.animation-container {
+    position: relative; /* Make the container take up space */
+    width: 100vw; /* Set the width to fill the entire viewport width */
+    height: 200px; /* Set the height to specify the animation height */
+}
+
+.walking-image {
+    position: absolute; /* Position the image absolutely */
+    top: 50%; /* Center vertically on the screen */
+    animation: walk 4s linear;
+    z-index: 2; /* Set a higher z-index value to make it appear in front */
+}
+
+
+
+
+
+
+
+
+
