--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css) layer(format);
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 :root {
     --clr-retro-red : #FE2F01;
     --clr-retro-brown: #A58B00;
@@ -81,16 +83,26 @@ nav div.container-fluid {
         transform: translateX(50vw);
         transform: translateX(10vw);
     }
-    100% {
+    80% {
         transform: translateX(50vw);
         transform: translateX(10vw);
     }
 }
 
 .walking-image {
-    animation: walk 4s linear forwards;
+    animation: walk 1s linear forwards;
 }
 
 .hero-header {
     text-align: center;
+    padding-left: 150px;
+    padding-right: 0;
+    font-family: 'Press start 2p', sans-serif;
+
 }
+
+.hero-left-align {
+    text-align: left;
+    font-family: 'Karla', sans-serif;
+}
+
